--- a/app/src/main/res/layout/my_feeds_item_layout.xml
+++ b/app/src/main/res/layout/my_feeds_item_layout.xml
@@ -12,8 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="8dp"
-        >
+        android:paddingBottom="8dp">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/img_uploaderImage"
@@ -22,10 +21,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="12dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/woman"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txt_uploaderName"
@@ -33,9 +31,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
+            android:layout_marginTop="4dp"
             android:text="Fransic Briggs"
             android:textSize="16sp"
-            android:layout_marginTop="4dp"
             app:layout_constraintStart_toEndOf="@+id/img_uploaderImage"
             app:layout_constraintTop_toTopOf="@+id/img_uploaderImage"
             tools:text="Fransic Briggs" />
@@ -96,18 +94,20 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/img_chat"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/img_chat"
             tools:text="348" />
 
         <ImageView
             android:id="@+id/img_chat"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
+            android:contentDescription="TODO"
             app:layout_constraintEnd_toStartOf="@+id/txt_chatNo"
             app:layout_constraintTop_toBottomOf="@+id/txt_ReadMore"
-            app:srcCompat="@drawable/ic_chat"
-            android:contentDescription="TODO" />
+            app:srcCompat="@drawable/ic_chat" />
 
         <TextView
             android:id="@+id/txt_LikesNo"
@@ -120,12 +120,14 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/img_chat"
             app:layout_constraintEnd_toStartOf="@+id/img_chat"
+            app:layout_constraintTop_toTopOf="@+id/img_chat"
             tools:text="1122" />
 
         <ImageView
             android:id="@+id/img_likes"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_LikesNo"
@@ -144,6 +146,29 @@
             app:layout_constraintStart_toEndOf="@+id/txt_uploaderName"
             app:layout_constraintTop_toTopOf="@+id/txt_uploaderName"
             app:srcCompat="@drawable/ic_more_horiz" />
+
+        <ImageView
+            android:id="@+id/img_edit_feed"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="@+id/txt_ReadMore"
+            app:layout_constraintTop_toBottomOf="@+id/txt_ReadMore"
+            app:srcCompat="@drawable/ic_edit" />
+
+        <ImageView
+            android:id="@+id/img_del_feed"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/img_edit_feed"
+            app:layout_constraintStart_toEndOf="@+id/img_edit_feed"
+            app:layout_constraintTop_toTopOf="@+id/img_edit_feed"
+            app:srcCompat="@drawable/ic_deletet" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
