--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -42,7 +42,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_done"/>
+            app:srcCompat="@drawable/ic_check_circle"/>
 
 
         <TextView
@@ -64,6 +64,7 @@
         android:paddingLeft="10dp"
         android:layout_marginTop="2dp"
         android:background="#fff">
+
         <ImageView
             android:id="@+id/img_cancle"
             android:layout_width="40dp"
