--- a/app/src/main/res/layout/item_booking_request.xml
+++ b/app/src/main/res/layout/item_booking_request.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="14dp">
 
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/woman"
+                android:scaleType="centerCrop"
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="61dp" />
         </androidx.cardview.widget.CardView>
@@ -159,7 +160,7 @@
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_address"
-            app:srcCompat="@drawable/ic_done" />
+            app:srcCompat="@drawable/ic_check_circle" />
 
         <ImageView
             android:id="@+id/imageView11"
