--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -33,11 +33,13 @@
         android:icon="@drawable/user_admin"
         android:title="User Admin"/>
 
-
         <item android:id="@+id/nav_SocialMediaFrame"
-            android:icon="@drawable/user_admin"
+            android:icon="@drawable/frame"
             android:title="Social Media Fram studio"/>
 
+        <item android:id="@+id/nav_ViewSongRequest"
+            android:icon="@drawable/song"
+            android:title="View Song Requests"/>
 
 
         <item android:id="@+id/nav_Logout"
