--- a/app/src/main/res/layout/activiyt_dj_profile.xml
+++ b/app/src/main/res/layout/activiyt_dj_profile.xml
@@ -8,6 +8,25 @@
     android:layout_height="match_parent"
     android:background="@color/colorBlack">
 
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#000"
+        android:id="@+id/toolbar"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        >
+        <Switch
+            android:id="@+id/profile_swt"
+            android:layout_gravity="right|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="16dp"
+            android:theme="@style/SCBSwitch"
+            />
+    </androidx.appcompat.widget.Toolbar>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
