--- a/app/src/main/res/layout/dailoge_change_password.xml
+++ b/app/src/main/res/layout/dailoge_change_password.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:background="@drawable/roundshape"
     android:layout_gravity="center"
+    app:cardCornerRadius="10dp"
     android:elevation="10dp">
 
     <RelativeLayout
