--- a/app/src/main/res/layout/activity_edit_follwer.xml
+++ b/app/src/main/res/layout/activity_edit_follwer.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBlack"
     >
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/img_follower"
