--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/rlt_view_all_request"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:paddingLeft="10dp"
         android:background="#fff">
         <ImageView
@@ -27,15 +27,24 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_eye"
             android:textColor="@color/colorBlack"/>
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            app:srcCompat="@drawable/ic_arrow_forward"/>
+
     </RelativeLayout>
 
 
     <RelativeLayout
         android:id="@+id/rlt_approved_request"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:paddingLeft="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="8dp"
         android:background="#fff">
         <ImageView
             android:id="@+id/img_done"
@@ -54,15 +63,25 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_done"
             android:textColor="@color/colorBlack"/>
+
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            app:srcCompat="@drawable/ic_arrow_forward"/>
+
     </RelativeLayout>
 
 
     <RelativeLayout
         android:id="@+id/rlt_cancle_request"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_height="70dp"
+        android:paddingLeft="8dp"
+        android:layout_marginTop="10dp"
         android:background="#fff">
 
         <ImageView
@@ -82,6 +101,15 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/img_cancle"
             android:textColor="@color/colorBlack"/>
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            app:srcCompat="@drawable/ic_arrow_forward"/>
+
     </RelativeLayout>
 
 
