Done With Service

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -41,6 +41,9 @@
             android:icon="@drawable/song"
             android:title="View Song Requests"/>
 
+        <item android:id="@+id/nav_MyServices"
+            android:icon="@drawable/delivery"
+            android:title="My Services"/>
 
         <item android:id="@+id/nav_Logout"
             android:icon="@drawable/logout"
