--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,14 @@
         <item name="android:colorForeground">#fff</item>
     </style>
 
+    <style name="Spinner" parent="Widget.AppCompat.Light.DropDownItem.Spinner">
+        <item name="android:paddingStart" tools:targetApi="jelly_bean_mr1">0dp</item>
+        <item name="android:paddingEnd" tools:targetApi="jelly_bean_mr1">0dp</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:backgroundTint" tools:targetApi="lollipop">@color/colorBlue</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:popupBackground">#DFFFFFFF</item>
+    </style>
+
+
 </resources>
