final done with dj app

--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -104,7 +104,7 @@
         android:text="Publish"
         android:textColor="#fff"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/fullround_white_stroke"
+        android:background="@drawable/fullroundshape"
         />
 
 
