--- a/app/src/main/res/layout/activity_payment_method.xml
+++ b/app/src/main/res/layout/activity_payment_method.xml
@@ -121,7 +121,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="Pay Now"
-        android:background="@drawable/roundshape"
+        android:background="@drawable/fullroundshape"
         android:textColor="#fff"
         />
 
