--- a/app/src/main/res/layout/activiyt_dj_profile.xml
+++ b/app/src/main/res/layout/activiyt_dj_profile.xml
@@ -2,12 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center_vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack">
-
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -26,6 +24,13 @@
             android:theme="@style/SCBSwitch"
             />
     </androidx.appcompat.widget.Toolbar>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -166,7 +171,7 @@
         <Button
             android:id="@+id/btn_UpdateProfile"
             android:layout_width="175dp"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/fullroundshape"
             android:text="Update"
@@ -190,38 +195,6 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_UpdateProfile"
             app:layout_constraintVertical_bias="0.32999998"
             tools:ignore="MissingConstraints">
-
-            <LinearLayout
-                android:id="@+id/rlt_subcribing"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/txt_subscribingToEmail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Subscribe to a email list from the artist"
-                    android:textColor="@color/Graycolor"
-                    android:textSize="16sp" />
-
-                <Switch
-                    android:id="@+id/swt_subscribeState"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginLeft="5dp"
-                    android:padding="0dp"
-                    android:theme="@style/SCBSwitch" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/Graycolor" />
-
 
             <RelativeLayout
                 android:id="@+id/rlt_paymentMethod"
@@ -357,5 +330,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    </LinearLayout>
 </LinearLayout>
