--- a/app/src/main/res/layout/item_followers_and_blocked_user.xml
+++ b/app/src/main/res/layout/item_followers_and_blocked_user.xml
@@ -13,16 +13,16 @@
         android:layout_height="match_parent">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/img_follwer"
+            android:id="@+id/img_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:srcCompat="@drawable/ic_doctor"
             />
 
         <TextView
-            android:id="@+id/txt_follwer_name"
-            android:layout_toRightOf="@+id/img_follwer"
-            android:layout_marginTop="5dp"
+            android:id="@+id/txt_User_name"
+            android:layout_toRightOf="@+id/img_profile"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,29 +31,19 @@
             android:textSize="16sp"
             />
 
-        <TextView
-            android:id="@+id/txt_SubscribeArtistStatus"
-            android:layout_toRightOf="@+id/img_follwer"
-            android:layout_below="@+id/txt_follwer_name"
-            android:layout_marginTop="4dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CEO of WE 6 Band"
-            android:textColor="@color/Graycolor"
-            android:textSize="13sp"
-            />
-
 
         <TextView
-            android:id="@+id/txt_UnFollow"
+            android:id="@+id/txt_action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlue"
-           android:padding="6dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:textSize="12sp"
             android:background="@drawable/blueround_stroke"
-            android:text="Unfollow"
+            android:text="Edit"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
 
@@ -62,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
-            android:layout_below="@+id/img_follwer"
+            android:layout_below="@+id/img_profile"
             android:background="@color/Graycolor"
             />
 
