--- a/app/src/main/res/layout/item_notification_layout.xml
+++ b/app/src/main/res/layout/item_notification_layout.xml
@@ -13,16 +13,16 @@
         android:layout_height="match_parent">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/img_follwer"
+            android:id="@+id/img_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
             app:srcCompat="@drawable/ic_doctor"
             />
 
         <TextView
-            android:id="@+id/txt_follwer_name"
-            android:layout_toRightOf="@+id/img_follwer"
-            android:layout_centerVertical="true"
+            android:id="@+id/txt_User_name"
+            android:layout_toRightOf="@+id/img_profile"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,19 +31,29 @@
             android:textSize="16sp"
             />
 
+        <TextView
+            android:id="@+id/txt_SubscribeArtistStatus"
+            android:layout_toRightOf="@+id/img_profile"
+            android:layout_below="@+id/txt_User_name"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CEO of WE 6 Band"
+            android:textColor="@color/Graycolor"
+            android:textSize="13sp"
+            />
+
 
         <TextView
-            android:id="@+id/txt_edit"
+            android:id="@+id/txt_UnBlock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorBlue"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+           android:padding="6dp"
             android:textSize="12sp"
             android:background="@drawable/blueround_stroke"
-            android:text="Edit"
+            android:text="Unfollow"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"/>
 
@@ -52,7 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="4dp"
-            android:layout_below="@+id/img_follwer"
+            android:layout_below="@+id/img_profile"
             android:background="@color/Graycolor"
             />
 
