--- a/app/src/main/res/layout/payment_successfull_dialoge.xml
+++ b/app/src/main/res/layout/payment_successfull_dialoge.xml
@@ -4,7 +4,10 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:paddingTop="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="25dp"
     android:orientation="vertical"
     android:background="@drawable/white_roundshape"
     app:cardCornerRadius="10dp">
@@ -37,16 +40,18 @@
 
         <TextView
             android:id="@+id/txt_ok"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="25dp"
             android:layout_gravity="center"
             android:textSize="20sp"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="80dp"
+            android:paddingRight="80dp"
+            android:textStyle="bold"
             android:background="@drawable/blueround_stroke"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/colorBlue"
             android:text="OK"/>
 
     </LinearLayout>
