--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -38,7 +38,7 @@
         android:textSize="18sp"/>
             <TextView
                 android:id="@+id/time"
-                android:layout_marginTop="10dp"
+                android:layout_below="@+id/msg"
                 android:layout_marginLeft="2dp"
                 android:layout_toRightOf="@+id/msg"
                 android:layout_width="wrap_content"
