--- a/app/src/main/res/layout/activity_chat_viewer.xml
+++ b/app/src/main/res/layout/activity_chat_viewer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/pullToRefresh"
-    android:background="#01050E"
+    android:background="@color/colorBlack"
     tools:context=".ChatViewerActivity">
 
     <RelativeLayout
@@ -15,7 +15,7 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorBlack"
+        android:background="#1C1C1C"
         android:id="@+id/toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
