--- a/app/src/main/res/layout/my_feeds_item_layout.xml
+++ b/app/src/main/res/layout/my_feeds_item_layout.xml
@@ -21,7 +21,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/rectangle2"
+            app:srcCompat="@drawable/ic_doctor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,7 +52,7 @@
         <ImageView
             android:id="@+id/img_feedImage"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio=""
@@ -60,7 +60,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_uploaderImage"
-            app:srcCompat="@drawable/rectangle" />
+            android:background="@color/colorBlack" />
 
         <TextView
             android:id="@+id/txt_imgDescription"
@@ -148,6 +148,28 @@
             app:layout_constraintStart_toEndOf="@+id/txt_uploaderName"
             app:layout_constraintTop_toTopOf="@+id/txt_uploaderName"
             app:srcCompat="@drawable/ic_more_horiz" />
+
+        <ProgressBar
+            android:id="@+id/progressBarFead"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/img_feedImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/img_feedImage" />
+
+        <ProgressBar
+            android:id="@+id/progressBarProfile"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/img_uploaderImage"
+            app:layout_constraintEnd_toEndOf="@+id/img_uploaderImage"
+            app:layout_constraintStart_toStartOf="@+id/img_uploaderImage"
+            app:layout_constraintTop_toTopOf="@+id/img_uploaderImage" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
