add blog work done

--- a/app/src/main/res/layout/my_feeds_item_layout.xml
+++ b/app/src/main/res/layout/my_feeds_item_layout.xml
@@ -155,6 +155,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:indeterminateDrawable="@drawable/progressbar"
             app:layout_constraintBottom_toBottomOf="@+id/img_feedImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -166,6 +167,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:indeterminateDrawable="@drawable/progressbar"
             app:layout_constraintBottom_toBottomOf="@+id/img_uploaderImage"
             app:layout_constraintEnd_toEndOf="@+id/img_uploaderImage"
             app:layout_constraintStart_toStartOf="@+id/img_uploaderImage"
