--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -18,26 +18,27 @@
         android:textColor="#fff"
         android:textSize="18sp"
         android:text="Add Service Image"/>
-    <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:gravity="center"
-        android:background="@drawable/white_roundshape"
-        >
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/ic_add_a_photo_"/>
-        <ImageView
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            />
-    </LinearLayout>
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/white_roundshape"
+            android:gravity="center">
 
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:srcCompat="@drawable/ic_add_a_photo_" />
 
-    <EditText
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <EditText
         android:layout_marginTop="16dp"
         android:id="@+id/edt_service_title"
         android:layout_width="match_parent"
