--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -1,28 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:fillViewport="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/colorBlack">
 
-
-    <EditText
-        android:id="@+id/txt_blog_title"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:text="Title"
-        android:gravity="center_vertical"
-        android:paddingLeft="8dp"
-        android:background="@drawable/edt_shape"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content">
 
+        <EditText
+            android:id="@+id/txt_blog_title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/edt_shape"
+            android:gravity="center_vertical"
+            android:hint="Required"
+            android:paddingLeft="8dp"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
+        <ImageView
+            android:id="@+id/featuredimg"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:background="#fff"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
+        <ImageView
+            android:id="@+id/camera"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintBottom_toBottomOf="@+id/featuredimg"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/featuredimg"
+            app:layout_constraintTop_toTopOf="@+id/featuredimg"
+            app:srcCompat="@drawable/ic_add_a_photo_" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Featured Image Required"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/featuredimg" />
+
+        <ImageView
+            android:id="@+id/imgGallery"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/ic_collections" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Add Collection"
+            android:textColor="#fff"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/featuredimg" />
+
+        <EditText
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:background="@drawable/edt_shape"
+            android:gravity="top"
+            android:hint="Required"
+            android:padding="8dp"
+            android:textColor="#fff"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="8dp"
+            android:text="Blog Title"
+            android:textColor="#FBF9F9"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/txt_blog_title"
+            app:layout_constraintTop_toBottomOf="@+id/imgGallery" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="8dp"
+            android:text="Description"
+            android:textColor="#F6F5F5"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_blog_title" />
+
+        <ImageView
+            android:id="@+id/imgVideo"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imgGallery"
+            app:layout_constraintStart_toEndOf="@+id/imgGallery"
+            app:layout_constraintTop_toTopOf="@+id/imgGallery"
+            app:srcCompat="@drawable/ic_play" />
+
+        <ImageView
+            android:id="@+id/imgAudio"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imgVideo"
+            app:layout_constraintStart_toEndOf="@+id/imgVideo"
+            app:layout_constraintTop_toTopOf="@+id/imgVideo"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/ic_music" />
+
+        <Button
+            android:id="@+id/btn_publish"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/fullroundshape"
+            android:text="Publish"
+            android:textColor="#fff"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="150dp"
@@ -84,11 +219,11 @@
             android:layout_height="30dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:layout_weight="3"
+            android:layout_weight="1.5"
             android:background="@drawable/roundshape"
             android:text="Post"
             android:textColor="#fff"/>
 
     </LinearLayout>
-
-</LinearLayout>
+-->
+</ScrollView>
